--- a/css/main.scss
+++ b/css/main.scss
@@ -51,3 +51,8 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+body > header {
+	background-image: url("../img/antergos-bg-jpg");
+	background-position: center;
+	background-repeat: no-repeat
+}
